reformatted codes